link external stylesheet and add google fonts

--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
     />
 
     <title>Frontend Mentor | Stats preview card component</title>
+    <!-- Google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- External styeesheet -->
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <main>
