wrap element in a div

--- a/index.html
+++ b/index.html
@@ -28,12 +28,14 @@
     <main>
       <div class="container">
         <div class="container__content">
-          <h1>Get <span>insights</span> that help your business grow.</h1>
-          <p>
-            Discover the benefits of data analytics and make better decisions
-            regarding revenue, customer experience, and overall efficiency
-          </p>
-          <div class="container__figures">
+          <div class="container__details">
+            <h1>Get <span>insights</span> that help your business grow.</h1>
+            <p>
+              Discover the benefits of data analytics and make better decisions
+              regarding revenue, customer experience, and overall efficiency
+            </p>
+          </div>
+          <div class="container__stats">
             <p>
               <span> 10k+</span>
               companies
